labs/lab-09-networking/exercise-02-default-deny.yaml
---
# Exercise 2: Default Deny All
# TODO: fill in to deny ALL ingress and egress in the namespace

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: lab09
spec:
  podSelector: {}       # {} selects ALL pods in namespace
  policyTypes:
    - # TODO: Ingress
    - # TODO: Egress
  # No rules = deny everything matched
